Modify plan