@@ -2,10 +2,9 @@ package com.mammb.code.db.plan;
 
 import com.mammb.code.db.Metadata;
 import com.mammb.code.db.Transaction;
-import com.mammb.code.db.lang.TableName;
 import com.mammb.code.db.query.Parser.QueryData;
-import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class BasicQueryPlanner implements QueryPlanner {
     private final Metadata metadata;
@@ -17,16 +16,15 @@ public class BasicQueryPlanner implements QueryPlanner {
     @Override
     public Plan createPlan(QueryData data, Transaction tx) {
         //Step 1: Create a plan for each mentioned table or view.
-        List<Plan> plans = new ArrayList<>();
-        for (TableName tableName : data.tables()) {
-            plans.add(new TablePlan(tx, tableName, metadata));
-        }
+        List<Plan> plans = data.tables().stream()
+            .map(tableName -> new TablePlan(tx, tableName, metadata))
+            .collect(Collectors.toList());
 
         //Step 2: Create the product of all table plans
-        Plan p = plans.remove(0);
-        for (Plan nextplan : plans)
+        Plan p = plans.removeFirst();
+        for (Plan nextplan : plans) {
             p = new ProductPlan(p, nextplan);
-
+        }
         //Step 3: Add a selection plan for the predicate
         p = new SelectPlan(p, data.predicate());
 
